--- a/habit_app/pubspec.yaml
+++ b/habit_app/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_animate: ^2.0.0  
+  flutter_animate: ^2.0.0 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -60,10 +61,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+  - assets/accept.svg
+  - assets/alchol.svg
+  - assets/book.svg
+  - assets/goalpic.svg
+  - assets/porn.svg
+  - assets/profilepic.svg
+  - assets/run.svg
+  - assets/share.svg
+  - assets/smoke.svg
+  - assets/startpic.svg
+  - assets/thinkpic.svg
+  - assets/union.svg
+  - assets/peace.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
